@@ -4366,3 +4366,9 @@
 	  the format statement after the input data stream has been fully
 	  parsed, the %n format specifier will not be handled.  Reported by
 	  Lorenz Meier (and also earlier by Kate) (2013-03-17).
+	* drivers/serial/serial.c:  Support for O_NONBLOCK was not supported
+	  in the "upper half" serial driver.  This is normally not an issue
+	  because UART TX is almost always available, but it does become an
+	  if the UART uses hardware flow control or if the a "lower half" is
+	  something like the USB CDC/ACM driver that may need to block for
+	  significant amounts of time.
